--- a/Orders2/Orders2.Frontend/Components/Pages/Countries/CountryCreate.razor
+++ b/Orders2/Orders2.Frontend/Components/Pages/Countries/CountryCreate.razor
@@ -1,1 +1,5 @@
-﻿<h3>CountryCreate</h3>
+﻿<MudDialog>
+    <DialogContent>
+        <CountryForm Country="country" OnValidSubmit="CreateAsync" ReturnAction="Return" />
+    </DialogContent>
+</MudDialog> 
