--- a/Orders2/Orders2.Frontend/Components/Pages/Countries/CountryEdit.razor
+++ b/Orders2/Orders2.Frontend/Components/Pages/Countries/CountryEdit.razor
@@ -1,4 +1,5 @@
-﻿@if (country is null) 
+﻿@using Orders2.Frontend.Components.Pages.Shared
+@if (country is null) 
 { 
     <Loading /> 
 } 
@@ -6,7 +7,7 @@ else
 { 
     <MudDialog> 
         <DialogContent> 
-            <CountryForm Country="country" OnValidSubmit="EditAsync" ReturnAction="Return" /> 
+            <FormWithName Label="País:" Model="country" OnValidSubmit="EditAsync" ReturnAction="Return" /> 
         </DialogContent> 
     </MudDialog> 
 } 
