--- a/Orders2/Orders2.Frontend/Components/Layout/NavMenu.razor
+++ b/Orders2/Orders2.Frontend/Components/Layout/NavMenu.razor
@@ -3,7 +3,8 @@
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
-
+    <MudNavLink Href="categories" Match="NavLinkMatch.Prefix"
+                Icon="@Icons.Material.Filled.Category">Categorias</MudNavLink>
     <MudNavLink Href="countries" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Public">Países</MudNavLink> 
 
 </MudNavMenu>
