--- a/Orders2/Orders2.Frontend/Components/Pages/States/StateDetails.razor
+++ b/Orders2/Orders2.Frontend/Components/Pages/States/StateDetails.razor
@@ -1,4 +1,4 @@
-﻿@page "/countries" 
+﻿@page "/states/details/{StateId:int}" 
  
 @if (loading) 
 { 
@@ -6,7 +6,7 @@
 } 
 else 
 { 
-    <MudTable Items="@Countries" 
+    <MudTable Items="@cities" 
               @ref="table" 
               ServerData="LoadListAsync" 
               Dense="true" 
@@ -15,34 +15,21 @@ else
               FixedHeader="true" 
               FixedFooter="true"> 
         <ToolBarContent> 
-            <div class="d-flex justify-content-between"> 
-                <MudText Typo="Typo.h6" Class="me-4">Países</MudText> 
-                <MudButton Variant="Variant.Outlined"  
-                           EndIcon="@Icons.Material.Filled.Add"  
-                           Color="Color.Info" OnClick="@(() => ShowModalAsync())"> 
-                    Nuevo 
-                </MudButton> 
-            </div> 
+            <MudText Typo="Typo.h6" Class="mr-4"><i class="bi bi-globe-americas"></i> @state?.Name</MudText> 
+            <MudButton Variant="Variant.Outlined" Class="mr-4" StartIcon="@Icons.Material.Filled.ArrowBack" 
+Color="Color.Tertiary" OnClick="ReturnAction">Regresar</MudButton> 
+            <MudButton Variant="Variant.Outlined" Class="mr-4" EndIcon="@Icons.Material.Filled.Add" Color="Color.Info" 
+OnClick="@(() => ShowModalAsync())">Crear</MudButton> 
             <MudSpacer /> 
             <FilterComponent ApplyFilter="SetFilterValue" /> 
-        </ToolBarContent> 
-        <HeaderContent> 
-            <MudTh>País</MudTh> 
-            <MudTh style="width: 100px;">Estados</MudTh> 
+        </ToolBarContent>                                                                                                                                            
+        <HeaderContent>                                      
+            <MudTh>Ciudad</MudTh> 
             <MudTh style="width: 270px;">Acciones</MudTh> 
         </HeaderContent> 
         <RowTemplate> 
-            <MudTd>@context.Name</MudTd>
-            <MudTd DataLabel="Estados">
-                <MudTooltip Text="Estados / Departamentos">
-                    <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Map" Color="Color.Info" OnClick="@(() =>
-StatesAction(@context))" style="width: 100px;">
-                        @context.StatesNumber
-                    </MudButton>
-                </MudTooltip>
-            </MudTd>
-            <MudTd>@context.StatesNumber</MudTd> 
-            <MudTd> 
+            <MudTd DataLabel="Ciudad">@context.Name</MudTd> 
+            <MudTd DataLabel="Acciones"> 
                 <MudTooltip Text="Editar"> 
                     <MudButton Variant="Variant.Filled" 
                                Color="Color.Warning" 
@@ -60,12 +47,12 @@ StatesAction(@context))" style="width: 100px;">
             </MudTd> 
         </RowTemplate> 
         <NoRecordsContent> 
-            <MudText>"No hay registros"</MudText> 
+            <MudText>No se encontraron registros.</MudText> 
         </NoRecordsContent> 
         <PagerContent> 
-            <MudTablePager RowsPerPageString="Número de registros" 
+            <MudTablePager RowsPerPageString="Numero de Registros:" 
                            PageSizeOptions="pageSizeOptions" 
-                           AllItemsText="Todo" 
+                           AllItemsText="Todos" 
                            InfoFormat="@infoFormat" /> 
         </PagerContent> 
     </MudTable> 
